i18n/versioned_docs/ja-jp/docusaurus-plugin-content-docs/version-3.13/scalardb-sql/scalardb-sql-status-codes.mdx
---
tags:
  - Enterprise Premium
displayed_sidebar: docsJapanese
---

# ScalarDB SQL エラーコード

このページでは、ScalarDB SQL のエラーコードの一覧を示します。

## エラーコードのクラスと説明

| クラス       | 説明                       |
|:------------|:--------------------------|
| `SQL-1xxxx` | ユーザーエラーカテゴリのエラー |

## `SQL-1xxxx` ステータスコード

### `SQL-10000`

**メッセージ**

```markdown
The namespace does not exist. Namespace: %s
```

### `SQL-10001`

**メッセージ**

```markdown
The table does not exist. Table: %s
```

### `SQL-10002`

**メッセージ**

```markdown
The column %s does not exist
```

### `SQL-10003`

**メッセージ**

```markdown
The column does not exist. Table: %s; Column: %s
```

### `SQL-10004`

**メッセージ**

```markdown
The column index is out of bounds. Index: %d; Size: %d
```

### `SQL-10005`

**メッセージ**

```markdown
A positional bind marker is not allowed when binding named values
```

### `SQL-10006`

**メッセージ**

```markdown
A named bind marker is not allowed when binding positional values
```

### `SQL-10007`

**メッセージ**

```markdown
Cannot convert BLOB values to SQL. Please use a bind marker for a BLOB value and bind it separately
```

### `SQL-10008`

**メッセージ**

```markdown
No namespace name has been specified. Set a default namespace name, or explicitly specify a namespace name
```

### `SQL-10009`

**メッセージ**

```markdown
Zero bytes may not occur in string parameters
```

### `SQL-10010`

**メッセージ**

```markdown
Mixing positional values and named values is not allowed
```

### `SQL-10011`

**メッセージ**

```markdown
Preparing a transaction is supported only in two-phase commit transaction mode
```

### `SQL-10012`

**メッセージ**

```markdown
Validating a transaction is supported only in two-phase commit transaction mode
```

### `SQL-10013`

**メッセージ**

```markdown
The previous transaction is still in progress. Commit, roll back, or suspend the previous transaction first
```

### `SQL-10014`

**メッセージ**

```markdown
This SQL session has already been closed
```

### `SQL-10015`

**メッセージ**

```markdown
A transaction has not begun
```

### `SQL-10016`

**メッセージ**

```markdown
The type %s is not supported
```

### `SQL-10017`

**メッセージ**

```markdown
No connection mode implementations are found. Please add a connection mode implementation to the classpath
```

### `SQL-10018`

**メッセージ**

```markdown
The connection mode is not specified, but multiple connection mode implementations are found. Specify one of the following connection modes: %s
```

### `SQL-10019`

**メッセージ**

```markdown
The connection mode '%s' is not found. Specify one of the following connection modes: %s
```

### `SQL-10020`

**メッセージ**

```markdown
Access denied: You need the %s privilege for the namespace %s to execute this operation
```

### `SQL-10021`

**メッセージ**

```markdown
Access denied: You need the %s privilege for the table %s to execute this operation
```

### `SQL-10022`

**メッセージ**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege for the table %s
```

### `SQL-10023`

**メッセージ**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege for the namespace %s
```

### `SQL-10024`

**メッセージ**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege for the table %s
```

### `SQL-10025`

**メッセージ**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege for the namespace %s
```

### `SQL-10026`

**メッセージ**

```markdown
Syntax error. Line %d:%d %s
```

### `SQL-10027`

**メッセージ**

```markdown
Syntax error. Multiple PRIMARY KEYs specified (exactly one required)
```

### `SQL-10028`

**メッセージ**

```markdown
Cannot grant the INSERT privilege if the user doesn't have the UPDATE privilege
```

### `SQL-10029`

**メッセージ**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the INSERT privilege
```

### `SQL-10030`

**メッセージ**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the SELECT privilege
```

### `SQL-10031`

**メッセージ**

```markdown
Cannot grant the DELETE privilege if the user doesn't have the SELECT privilege
```

### `SQL-10032`

**メッセージ**

```markdown
Cannot revoke the SELECT privilege if the user has the UPDATE privilege
```

### `SQL-10033`

**メッセージ**

```markdown
Cannot revoke the SELECT privilege if the user has the DELETE privilege
```

### `SQL-10034`

**メッセージ**

```markdown
Cannot revoke the INSERT privilege if the user has the UPDATE privilege
```

### `SQL-10035`

**メッセージ**

```markdown
Cannot revoke the UPDATE privilege if the user has the INSERT privilege
```

### `SQL-10036`

**メッセージ**

```markdown
A non-clustering-key column is specified in the CLUSTERING ORDER directive. Column: %s
```

### `SQL-10037`

**メッセージ**

```markdown
The order of the columns in the CLUSTERING ORDER directive must match the order for the clustering key (%s must appear before %s)
```

### `SQL-10038`

**メッセージ**

```markdown
The CLUSTERING ORDER is missing for the column %s
```

### `SQL-10039`

**メッセージ**

```markdown
Empty SQL is specified
```

### `SQL-10040`

**メッセージ**

```markdown
Multiple SQLs are not allowed
```

### `SQL-10041`

**メッセージ**

```markdown
The column %s is ambiguous
```

### `SQL-10042`

**メッセージ**

```markdown
The column %s cannot be specified in the %s clause. Only the columns in the table %s can be specified in the %s clause
```

### `SQL-10043`

**メッセージ**

```markdown
An unbound bind marker is still in the escape character of the LIKE predicate for the column %s
```

### `SQL-10044`

**メッセージ**

```markdown
The escape character must be a TEXT value for the LIKE predicate for the column %s
```

### `SQL-10045`

**メッセージ**

```markdown
The value of the predicate must not be null unless the operator is 'IS NULL' or 'IS NOT NULL'. Predicate: %s
```

### `SQL-10046`

**メッセージ**

```markdown
An unbound bind marker is still in the LIMIT clause
```

### `SQL-10047`

**メッセージ**

```markdown
The LIMIT must be an INT value
```

### `SQL-10048`

**メッセージ**

```markdown
Unmatched column names or values
```

### `SQL-10049`

**メッセージ**

```markdown
The column %s is specified twice
```

### `SQL-10050`

**メッセージ**

```markdown
All primary key columns must be specified in the INSERT or UPSERT statement
```

### `SQL-10051`

**メッセージ**

```markdown
An unbound bind marker is still in the value of the column %s
```

### `SQL-10052`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a boolean value (BOOLEAN) is specified
```

### `SQL-10053`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a decimal number (INT or BIGINT) is specified
```

### `SQL-10054`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a floating point number (FLOAT or DOUBLE) is specified
```

### `SQL-10055`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a string (TEXT) is specified
```

### `SQL-10056`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BOOLEAN value is specified
```

### `SQL-10057`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but an INT value is specified
```

### `SQL-10058`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BIGINT value is specified
```

### `SQL-10059`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a FLOAT value is specified
```

### `SQL-10060`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a DOUBLE value is specified
```

### `SQL-10061`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TEXT value is specified
```

### `SQL-10062`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BLOB value is specified
```

### `SQL-10063`

**メッセージ**

```markdown
RIGHT OUTER JOIN can only be specified as the first join
```

### `SQL-10064`

**メッセージ**

```markdown
The JOIN predicate is not specified properly. Predicate: %s
```

### `SQL-10065`

**メッセージ**

```markdown
The data types of the columns in the JOIN predicate do not match. Predicate: %s
```

### `SQL-10066`

**メッセージ**

```markdown
The column %s is specified twice in the JOIN predicates. Predicates: %s
```

### `SQL-10067`

**メッセージ**

```markdown
Either all primary key columns or an indexed column for the table %s must be specified in the JOIN predicates. Predicates: %s
```

### `SQL-10068`

**メッセージ**

```markdown
Cannot issue mutation DML SQLs such as INSERT, UPDATE or DELETE with executeQuery()
```

### `SQL-10069`

**メッセージ**

```markdown
Cannot issue SELECT SQLs with executeUpdate()
```

### `SQL-10070`

**メッセージ**

```markdown
The TWO_PHASE_COMMIT_TRANSACTION mode is not supported in the current transaction manager
```
